syntax="proto3";

package proto;
message UserProtoObj
{
  string first_name=1;
  string last_name=2;
  string email=3;
  string password=4;
  int64 cprNumber=5;
  int64 phoneNumber=6;
  bool is_admin=7;
}

service UserProtoService
{
  rpc CreateUser(UserProtoObj) returns (UserProtoObj){}
}

message UserListResponse
{
  repeated UserProtoObj allUsers=1;
}